# logcrab

./: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  PKGBUILD  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.rs  check.sh  logcrab-mime.xml  logcrab-system.desktop  logcrab.desktop  quick-check.sh  sample_log.txt
.github/: copilot-instructions.md
docs/: ARCHITECTURE_MULTI_SOURCE.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_ROADMAP.md  SIDECAR_API_V1.md  sidecar_api_v1.frames.schema.json  sidecar_api_v1.openapi.yaml
proto/: sidecar_v2.proto
scripts/: bump_version.py
src/: app.rs  export.rs  filter_worker.rs  lib.rs  main.rs
src/anomaly/: entropy.rs  keyword.rs  mod.rs  rarity.rs  scorer.rs  sidecar_client.rs  temporal.rs
src/app/: mod.rs  navigation.rs  tabs.rs
src/app/windows/: mod.rs  shortcuts.rs
src/config/: mod.rs  session_history.rs
src/core/: async_cache.rs  chunked_loader.rs  filter.rs  filter_worker.rs  histogram.rs  histogram_worker.rs  log_file.rs  log_store.rs  mod.rs  queue_map.rs  search_rule.rs  search_state.rs  selection.rs  session.rs  task_worker.rs
src/filetype/: btsnoop.rs  bugreport.rs  calibration_window.rs  dlt.rs  dmesg.rs  generic.rs  logcat.rs  mod.rs  otel.rs  pcap.rs  registry_macro.rs  simple_file_state.rs
src/filetype/btsnoop/: avrcp.rs  hci.rs  hfp.rs  mod.rs  rfcomm.rs
src/input/: actions.rs  keyboard.rs  mod.rs
src/parser/: btsnoop.rs  dlt.rs  generic.rs  line.rs  logcat.rs  logline_types.rs  mod.rs  pcap.rs
src/state/: filter_state.rs  mod.rs
src/ui/: app.rs  filter_highlight.rs  log_view.rs  mod.rs  session_state.rs  toasts.rs
src/ui/components/: bookmark_panel.rs  filter_bar.rs  histogram.rs  log_table.rs  mod.rs
src/ui/tabs/: mod.rs  navigation.rs  tabs.rs
src/ui/tabs/bookmarks_tab/: bookmark_panel.rs  bookmarks_view.rs  mod.rs
src/ui/tabs/filter_tab/: export.rs  filter_bar.rs  filter_state.rs  filter_view.rs  histogram.rs  log_table.rs  mod.rs
src/ui/tabs/highlights_tab/: highlight_state.rs  mod.rs
src/ui/views/: bookmarks_view.rs  filter_view.rs  mod.rs
src/ui/windows/: about.rs  anomaly_help.rs  attention_panel.rs  change_filtername.rs  mod.rs  shortcuts.rs  sidecar_settings.rs  sync_dlt_time.rs  time_offset.rs
