[package]
name = "logcrab"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Daniel Freiermuth"]

[features]
default = []
profiling = ["ram-profiling", "cpu-profiling"]
ram-profiling = ["dhat"]
cpu-profiling = ["profiling/profile-with-tracy", "dep:tracy-client"]

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = "0.33.2"
egui_dock = "0.18.0"
keybinds = "0.2"
chrono = { version = "0.4", features = ["serde"] }
fancy-regex = "0.16.2"
rfd = "0.15.4"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dlt-core = "0.20"
rayon = "1.10"
egui-toast = "0.19"
dhat = { version = "0.3", optional = true }
profiling = { version = "1.0", default-features = false }
tracy-client = { version = "0.17", optional = true }

# Release profile optimizations
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.clippy]
# all = "warn"                     # Enable all clippy lints
# pedantic = "warn"                # Extra pedantic checks
# nursery = "warn"                 # Experimental lints
# cargo = "warn"                   # Cargo-specific lints
# indexing_slicing = "deny"
fallible_impl_from = "deny"
# wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
unused_self = "deny"
redundant_closure_for_method_calls = "deny"
doc_markdown = "warn"
map_unwrap_or = "warn"
too_many_lines = "warn"
assigning_clones = "deny"
if_not_else = "deny"
needless_pass_by_value = "deny"
uninlined_format_args = "deny"
unnecessary_semicolon = "deny"
manual_let_else = "deny"

# Deny critical issues
# unwrap_used = "deny"             # Force proper error handling
# expect_used = "deny"             # No expect() in production code
panic = "deny"                   # No panics in core
todo = "deny"                    # No TODOs in releases
too_many_arguments = "allow"

[lints.rust]
unsafe_code = "forbid"           # No unsafe in core modules
# missing_docs = "warn"            # All public APIs documented
