[package]
name = "logcrab"
version = "0.26.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Daniel Freiermuth"]
description = "A polyscopic anomaly explorer built with Rust and egui. LogCrab helps developers and system administrators debug by automatically highlighting unusual, novel, or interesting log lines in large log files."
repository = "https://github.com/daniel-freiermuth/logcrab"
keywords = ["log", "anomaly", "viewer", "debug", "egui"]
categories = ["development-tools::debugging", "visualization"]

[package.metadata.deb]
maintainer = "Daniel Freiermuth <daniel@freiermuth.dev>"
copyright = "2025-2026, Daniel Freiermuth <daniel@freiermuth.dev>"
license-file = ["LICENSE", "4"]
extended-description = """\
A polyscopic anomaly explorer built with Rust and egui. \
LogCrab helps developers and system administrators debug by \
automatically highlighting unusual, novel, or interesting log \
lines in large log files."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/logcrab", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/logcrab/README", "644"],
    ["logcrab-system.desktop", "usr/share/applications/logcrab.desktop", "644"],
    ["logcrab-mime.xml", "usr/share/mime/packages/", "644"],
    ["logo.png", "usr/share/icons/hicolor/256x256/apps/logcrab.png", "644"],
]

[features]
default = []
profiling = ["ram-profiling", "cpu-profiling"]
ram-profiling = ["dhat"]
cpu-profiling = ["profiling/profile-with-tracy", "dep:tracy-client"]

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
egui_dock = "0.18.0"
keybinds = "0.2"
chrono = { version = "0.4.43", features = ["serde"] }
fancy-regex = "0.17.0"
rfd = "0.17.2"
dirs = "6.0"
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.9"
dlt-core = "0.20"
pcap-parser = "0.17.0"
btsnoop = "0.2.1"
rayon = "1.10"
egui-toast = "0.19"
dhat = { version = "0.3", optional = true }
profiling = { version = "1.0", default-features = false }
tracy-client = { version = "0.18.4", optional = true }
tokio = { version = "1.49.0", features = ["sync"] }
fs2 = "0.4"
indexmap = { version = "2", features = ["rayon"] }

# Release profile optimizations
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }                     # Enable all clippy lints
pedantic = { level = "warn", priority = -1 }                # Extra pedantic checks
nursery = { level = "warn", priority = -1 }                 # Experimental lints
cargo = { level = "warn", priority = -1 }                   # Cargo-specific lints
indexing_slicing = "allow"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
match_same_arms = "allow"
unused_self = "deny"
redundant_closure_for_method_calls = "deny"
doc_markdown = "warn"
map_unwrap_or = "warn"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
too_many_lines = "allow"
assigning_clones = "deny"
if_not_else = "deny"
needless_pass_by_value = "deny"
uninlined_format_args = "deny"
unnecessary_semicolon = "deny"
manual_let_else = "deny"
needless_pass_by_ref_mut = "deny"
explicit_iter_loop = "deny"
cloned_instead_of_copied = "deny"
redundant_clone = "deny"
option_if_let_else = "deny"
missing_const_for_fn = "deny"
multiple_crate_versions = "allow"

# Deny critical issues
unwrap_used = "deny"             # Force proper error handling
# expect_used = "deny"             # No expect() in production code
panic = "deny"                   # No panics in core
todo = "deny"                    # No TODOs in releases
too_many_arguments = "allow"

[lints.rust]
unsafe_code = "forbid"           # No unsafe in core modules
# missing_docs = "warn"            # All public APIs documented
